Fix date spacing

--- a/app/assets/stylesheets/redesign/_forms.scss
+++ b/app/assets/stylesheets/redesign/_forms.scss
@@ -202,10 +202,6 @@ input[type="radio"][disabled],input[type="radio"].disabled,fieldset[disabled] in
     display: block !important;
 }
 
-.event-date {
-    width: 165px !important;
-}
-
 .gsa18f_event_end_date, .gsa18f_event_start_date {
     display: inline !important;
     div {
